Add mailto link instead of contact form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <a href="#about"><iconify-icon icon="mdi:about"></iconify-icon> About</a>
         <a href="#work"><iconify-icon icon="mdi:art"></iconify-icon> Work</a>
-        <a href="#contact"><iconify-icon icon="mdi:email"></iconify-icon> Contact</a>
+<!--        <a href="#contact"><iconify-icon icon="mdi:email"></iconify-icon> Contact</a>-->
         <a href="#resume"><iconify-icon icon="mdi:paper"></iconify-icon> Resumé</a>
       </nav>
     </header>
@@ -27,9 +27,9 @@
       <a class="icon-button" href="https://www.linkedin.com/in/austin-miller-5432bb39/" target="_blank">
         <iconify-icon icon="ri:linkedin-fill"></iconify-icon>
       </a>
-<!--      <a class="icon-button" href="mailto:a@a.a" target="_blank">-->
-<!--        <iconify-icon icon="mdi:email-outline"></iconify-icon>-->
-<!--      </a>-->
+      <a class="icon-button" href="mailto:austinmillerdev@pm.me" target="_blank">
+        <iconify-icon icon="mdi:email-outline"></iconify-icon>
+      </a>
     </aside>
     <main>
       <div class="container">
@@ -139,10 +139,10 @@
             </div>
           </div>
         </section>
-        <section id="contact">
-          <h2 class="section-heading">Contact Me</h2>
-          <form action="">this is a form</form>
-        </section>
+<!--        <section id="contact">-->
+<!--          <h2 class="section-heading">Contact Me</h2>-->
+<!--          <form action="">this is a form</form>-->
+<!--        </section>-->
         <section id="resume">
           <h2 class="section-heading">Resumé</h2>
           <a href="">Download as PDF</a>
