--- a/index.html
+++ b/index.html
@@ -37,15 +37,29 @@
           <p class="opening">Hi, I'm</p>
           <h1 class="headline">Austin Miller</h1>
           <h2 class="subtitle">I build things on the web.</h2>
-          <p class="blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur culpa deserunt est impedit in minima, molestias nam nisi officiis, porro quae recusandae sapiente sit soluta voluptate. Adipisci dolore harum quod.</p>
-          <div class="call-to-action"><button>Say hello</button></div>
+          <p class="blurb">I have professional experience in all aspects of full-stack web development and design,
+            from UI wireframing to back-end performance optimization, and I want to help bring your
+            team to the next level.</p>
+          <div class="call-to-action">
+            <button onclick="location.href='#about'" type="button">Learn more</button>
+          </div>
 <!--          <p class="blurb">I'm a full stack engineer with a love for intuitive UI and code.</p>-->
         </div>
         <section id="about" class="popout">
           <h2 class="section-heading">About Me</h2>
           <div class="id-card">
-            <img class="id-pic" src="src/assets/images/me.png" alt="Me">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu dictum varius duis at consectetur. Dictumst quisque sagittis purus sit amet. Elementum curabitur vitae nunc sed velit. Ridiculus mus mauris vitae ultricies leo integer malesuada. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Est ullamcorper eget nulla facilisi etiam dignissim diam quis enim.</p>
+            <img class="id-pic" style="float: left;" src="src/assets/images/me.png" alt="Me">
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu dictum varius duis at consectetur. Dictumst quisque sagittis purus sit amet. Elementum curabitur vitae nunc sed velit. Ridiculus mus mauris vitae ultricies leo integer malesuada. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Est ullamcorper eget nulla facilisi etiam dignissim diam quis enim.</p>-->
+            <div class="bio">
+<!--              <div><iconify-icon icon="material-symbols:location-on-outline"></iconify-icon> Portland, OR, US</div>-->
+              <p>I have professional experience in all levels of the web development life cycle,
+                from wireframing to back-end performance optimization. Through this, I've learned to value
+                readable code and clear UI design.</p>
+              <p>I started with Doxpop, LLC, where I designed, built, and maintained multiple dynamic
+                pages using Java, JavaScript, jQuery, and PostgreSQL. More recently, I completed the intensive <em>Odin Project</em>
+                curriculum, honing my development skills and gaining expertise in
+                Ruby on Rails, React, and other current technologies.</p>
+            </div>
           </div>
         </section>
         <section id="work">
@@ -62,7 +76,7 @@
                     <iconify-icon icon="mdi:external-link"></iconify-icon>
                   </a>
                 </div>
-                <p>A command line chess program, fully tested with RSpec.</p>
+                <p>A command line chess program built in Ruby and fully tested with RSpec.</p>
               </div>
               <div class="tags"><span>Ruby</span></div>
             </div>
@@ -91,7 +105,7 @@
                     <iconify-icon icon="mdi:external-link"></iconify-icon>
                   </a>
                 </div>
-                A simple memory game with constantly shifting cards. Written in TypeScript + React using Vite.
+                <p>A simple memory game with constantly shifting cards. Written in TypeScript + React using Vite.</p>
               </div>
               <div class="tags"><span>TypeScript</span><span>React</span><span>CSS</span><span>Vite</span></div>
             </div>
@@ -145,7 +159,7 @@
 <!--        </section>-->
         <section id="resume">
           <h2 class="section-heading">Resumé</h2>
-          <a href="">Download as PDF</a>
+          <a href="">Get printable version</a>
         </section>
       </div>
     </main>
