Add web resume structure

--- a/index.html
+++ b/index.html
@@ -160,6 +160,149 @@
         <section id="resume">
           <h2 class="section-heading">Resumé</h2>
           <a href="">Get printable version</a>
+          <div class="web-resume">
+            <h1 class="name">Austin P. Miller</h1>
+            <hr>
+            <section class="contact-info">
+              <div>milleraus@pm.me</div>
+              <div>207-504-0786</div>
+              <div>https://github.com/apmwebdev</div>
+              <div>Portland, OR, USA</div>
+            </section>
+            <hr>
+            <section class="experience">
+              <h2>Relevant Experience</h2>
+              <div class="experience-card">
+                <h3>
+                  <span class="job-title">Woo Happiness Engineer</span>
+                  —
+                  <span class="company">Automattic, Inc., Remote</span>
+                </h3>
+                <h4>June 2019 - August 2022</h4>
+                <ul>
+                  <li>Assisted customers, trained new hires, wrote documentation, and raised issues with the development team for dozens of plugins on the WooCommerce e-commerce platform.</li>
+                  <li>Diagnosed and fixed CSS issues on user sites.</li>
+                  <li>Wrote JavaScript and Unix shell scripts for tools like Tampermonkey and Alfred to enhance productivity of the support team.</li>
+                </ul>
+              </div>
+              <div class="experience-card">
+                <h3>
+                  <span class="job-title">Support Engineer, Web Developer</span>
+                  —
+                  <span class="company">Prospress, Inc., Remote</span>
+                </h3>
+                <h4>September 2017 - June 2019</h4>
+                <ul>
+                  <li>Worked as a member of the support team to answer emails, write documentation, train new hires, and raise bugs and issues with the development team</li>
+                  <li>Developed middleware with Lumen/Laravel and the Mailgun and Help Scout APIs to enhance data sent to the support email system</li>
+                </ul>
+              </div>
+              <div class="experience-card">
+                <h3>
+                  <span class="job-title">Web Developer, UI Designer</span>
+                  —
+                  <span class="company">Doxpop, LLC, Richmond, IN</span>
+                </h3>
+                <h4>January 2014 - September 2017</h4>
+                <ul>
+                  <li>Worked as a full stack developer on a fully-featured Java EE web application serving thousands of users in Indiana and Michigan.</li>
+                  <li>Designed and implemented multiple high-traffic, interactive pages from the ground up by gathering requirements, creating mockups, and finally creating the fully functional pages, all while working with other developers, business partners, and customer focus groups.</li>
+                  <li>Managed an overhaul of parts of the site to fit Material Design UI standards.</li>
+                  <li>Worked with the support and testing teams to diagnose and fix critical, time-sensitive bugs.</li>
+                  <li>Wrote technical documentation on features and changes implemented.</li>
+                </ul>
+              </div>
+              <div class="experience-card">
+                <h3>
+                  <span class="job-title">Lead Instructor</span>
+                  —
+                  <span class="company">Greenhouse Coding Academy, Richmond, IN</span>
+                </h3>
+                <h4>February 2017 - April 2018</h4>
+                <ul>
+                  <li>Mentored middle and high school students in the basics of programming using Scratch.</li>
+                  <li>Designed the curriculum used by all instructors.</li>
+                </ul>
+              </div>
+            </section>
+            <section class="skills">
+              <h2>Skills</h2>
+              <div class="skills-container">
+                <div>
+                  <h3>Front End</h3>
+                  <ul>
+                    <li>HTML</li>
+                    <li>CSS, SCSS</li>
+                    <li>JavaScript <ul>
+                      <li>TypeScript</li>
+                      <li>React</li>
+                      <li>jQuery</li>
+                      <li>Node, NPM</li>
+                      <li>Vite</li>
+                      <li>Vitest, Jest</li>
+                    </ul></li>
+                  </ul>
+                </div>
+                <div>
+                  <h3>Back End</h3>
+                  <ul>
+                    <li>Ruby <ul>
+                      <li>RSpec</li>
+                      <li>Rails <ul>
+                        <li>Hotwire, Turbo, Stimulus</li>
+                        <li>Devise, Omniauth</li>
+                        <li>Faker</li>
+                      </ul></li>
+                    </ul></li>
+                    <li>Experience with PHP, Laravel/Lumen, and Java EE</li>
+                  </ul>
+                </div>
+                <div>
+                  <h3>Other Tools</h3>
+                  <ul>
+                    <li>Git, GitHub</li>
+                    <li>Unix shell</li>
+                    <li>Vim/NeoVim</li>
+                    <li>IntelliJ and JetBrains tools</li>
+                    <li>OOP design principles</li>
+                    <li>Accessible design</li>
+                    <li>Regular expressions</li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+            <section class="education">
+              <h2>Education</h2>
+              <div class="education-card">
+                <h3>
+                  <span class="degree">Web Developer</span>
+                  —
+                  <span class="school">The Odin Project (theodinproject.com)</span>
+                </h3>
+                <h4>September 2022 - February 2023</h4>
+                <p>Completed the Odin Project’s intensive full stack Ruby on Rails curriculum, including dozens of projects with only business requirements as guidance.</p>
+              </div>
+              <div class="education-card">
+                <h3>
+                  <span class="degree">Bachelor of Arts, Biology and Philosophy double major</span>
+                  —
+                  <span class="school">Earlham College, Richmond, IN</span>
+                </h3>
+                <h4>August 2006 - December 2010</h4>
+                <p>Cumulative GPA: 3.70/4.00</p>
+                <p>College Honors and Departmental Honors in Biology</p>
+              </div>
+            </section>
+            <section class="hobbies">
+              <h2>Interests and Hobbies</h2>
+              <ul>
+                <li>Magic: the Gathering</li>
+                <li>Disc golf</li>
+                <li>Fitness</li>
+                <li>Bad movies</li>
+              </ul>
+            </section>
+          </div>
         </section>
       </div>
     </main>
