Add basic styling for web resume

--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
           <div class="web-resume">
             <h1 class="name">Austin P. Miller</h1>
             <hr>
-            <section class="contact-info">
+            <div class="contact-info">
               <div>milleraus@pm.me</div>
               <div>207-504-0786</div>
               <div>https://github.com/apmwebdev</div>
               <div>Portland, OR, USA</div>
-            </section>
+            </div>
             <hr>
             <section class="experience">
               <h2>Relevant Experience</h2>
@@ -178,7 +178,7 @@
                   —
                   <span class="company">Automattic, Inc., Remote</span>
                 </h3>
-                <h4>June 2019 - August 2022</h4>
+                <h4 class="timespan">June 2019 - August 2022</h4>
                 <ul>
                   <li>Assisted customers, trained new hires, wrote documentation, and raised issues with the development team for dozens of plugins on the WooCommerce e-commerce platform.</li>
                   <li>Diagnosed and fixed CSS issues on user sites.</li>
@@ -191,7 +191,7 @@
                   —
                   <span class="company">Prospress, Inc., Remote</span>
                 </h3>
-                <h4>September 2017 - June 2019</h4>
+                <h4 class="timespan">September 2017 - June 2019</h4>
                 <ul>
                   <li>Worked as a member of the support team to answer emails, write documentation, train new hires, and raise bugs and issues with the development team</li>
                   <li>Developed middleware with Lumen/Laravel and the Mailgun and Help Scout APIs to enhance data sent to the support email system</li>
@@ -203,7 +203,7 @@
                   —
                   <span class="company">Doxpop, LLC, Richmond, IN</span>
                 </h3>
-                <h4>January 2014 - September 2017</h4>
+                <h4 class="timespan">January 2014 - September 2017</h4>
                 <ul>
                   <li>Worked as a full stack developer on a fully-featured Java EE web application serving thousands of users in Indiana and Michigan.</li>
                   <li>Designed and implemented multiple high-traffic, interactive pages from the ground up by gathering requirements, creating mockups, and finally creating the fully functional pages, all while working with other developers, business partners, and customer focus groups.</li>
@@ -218,7 +218,7 @@
                   —
                   <span class="company">Greenhouse Coding Academy, Richmond, IN</span>
                 </h3>
-                <h4>February 2017 - April 2018</h4>
+                <h4 class="timespan">February 2017 - April 2018</h4>
                 <ul>
                   <li>Mentored middle and high school students in the basics of programming using Scratch.</li>
                   <li>Designed the curriculum used by all instructors.</li>
@@ -229,7 +229,7 @@
               <h2>Skills</h2>
               <div class="skills-container">
                 <div>
-                  <h3>Front End</h3>
+                  <h3 class="skill-label">Front End</h3>
                   <ul>
                     <li>HTML</li>
                     <li>CSS, SCSS</li>
@@ -244,7 +244,7 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Back End</h3>
+                  <h3 class="skill-label">Back End</h3>
                   <ul>
                     <li>Ruby <ul>
                       <li>RSpec</li>
@@ -258,7 +258,7 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Other Tools</h3>
+                  <h3 class="skill-label">Other Tools</h3>
                   <ul>
                     <li>Git, GitHub</li>
                     <li>Unix shell</li>
@@ -279,7 +279,7 @@
                   —
                   <span class="school">The Odin Project (theodinproject.com)</span>
                 </h3>
-                <h4>September 2022 - February 2023</h4>
+                <h4 class="timespan">September 2022 - February 2023</h4>
                 <p>Completed the Odin Project’s intensive full stack Ruby on Rails curriculum, including dozens of projects with only business requirements as guidance.</p>
               </div>
               <div class="education-card">
@@ -288,14 +288,14 @@
                   —
                   <span class="school">Earlham College, Richmond, IN</span>
                 </h3>
-                <h4>August 2006 - December 2010</h4>
+                <h4 class="timespan">August 2006 - December 2010</h4>
                 <p>Cumulative GPA: 3.70/4.00</p>
                 <p>College Honors and Departmental Honors in Biology</p>
               </div>
             </section>
             <section class="hobbies">
               <h2>Interests and Hobbies</h2>
-              <ul>
+              <ul class="hobby-list">
                 <li>Magic: the Gathering</li>
                 <li>Disc golf</li>
                 <li>Fitness</li>
