--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div class="left">
+      <div class="left shadow-button">
         <a href="#">AM</a>
       </div>
       <nav>
@@ -21,13 +21,13 @@
       </nav>
     </header>
     <aside>
-      <a class="icon-button" href="https://github.com/apmwebdev/" target="_blank">
+      <a class="icon-button shadow-button" href="https://github.com/apmwebdev/" target="_blank">
         <iconify-icon icon="uil:github-alt"></iconify-icon>
       </a>
-      <a class="icon-button" href="https://www.linkedin.com/in/austin-miller-5432bb39/" target="_blank">
+      <a class="icon-button shadow-button" href="https://www.linkedin.com/in/austin-miller-5432bb39/" target="_blank">
         <iconify-icon icon="ri:linkedin-fill"></iconify-icon>
       </a>
-      <a class="icon-button" href="mailto:austinmillerdev@pm.me" target="_blank">
+      <a class="icon-button shadow-button" href="mailto:austinmillerdev@pm.me" target="_blank">
         <iconify-icon icon="mdi:email-outline"></iconify-icon>
       </a>
     </aside>
@@ -41,7 +41,7 @@
             from UI wireframing to back-end performance optimization, and I want to help bring your
             team to the next level.</p>
           <div class="call-to-action">
-            <button onclick="location.href='#about'" type="button">Learn more</button>
+            <button class="shadow-button" onclick="location.href='#about'" type="button">Learn more</button>
           </div>
 <!--          <p class="blurb">I'm a full stack engineer with a love for intuitive UI and code.</p>-->
         </div>
