--- a/index.html
+++ b/index.html
@@ -164,10 +164,9 @@
             <h1 class="name">Austin P. Miller</h1>
             <hr>
             <div class="contact-info">
-              <div>milleraus@pm.me</div>
-              <div>207-504-0786</div>
-              <div>https://github.com/apmwebdev</div>
+              <div>austinmillerdev@pm.me</div>
               <div>Portland, OR, USA</div>
+              <div>https://github.com/apmwebdev</div>
             </div>
             <hr>
             <section class="experience">
