--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
           <p class="opening">Hi, I'm</p>
           <h1 class="headline">Austin Miller</h1>
           <h2 class="subtitle">I build things on the web.</h2>
-          <p class="blurb">I have professional experience in all aspects of full-stack web development and design,
-            from UI wireframing to back-end performance optimization, and I want to help bring your
-            team to the next level.</p>
+          <p class="blurb">I'm a web developer specializing in Ruby on Rails and React.
+            I prioritize usability and accessibility.</p>
           <div class="call-to-action">
             <button class="shadow-button" onclick="location.href='#about'" type="button">Learn more</button>
           </div>
